syntax = "proto3";

package proto.weapon;

option java_multiple_files = true;

message WeaponList {
  repeated Weapon weapon = 1;
}

message Weapon {
  enum WeaponClassification {
    CLASSIFICATION_NONE = 0;
    Sword = 1;
    Axe = 2;
    MaulOrHammer = 3;
    RangedArea = 4;
    Shotgun = 5;
    FullAuto = 6;
    SniperRifle = 7;
    PsykerStaff = 8;
    NavigatorStaff = 9;
    Chainsaw = 10;
    Knife = 11;
    Maul = 12;
    Hammer = 13;
    Shield = 14;
  }

  enum WeaponFamily {
    FAMILY_NONE = 0;
    Laser = 1;
    Solid = 2;
    Bolt = 3;
    Melta = 4;
    Plasma = 5;
    Flame = 6;
    Exotic = 7;
    Chain = 8;
    Power = 9;
    Primitive = 10;
    Force = 11;
    Blade = 12;
    ChainSaw = 13;
  }

  enum WeaponCategory {
    CATEGORY_NONE = 0;
    Melee = 1;
    Thrown = 2;
    Pistol = 3;
    Basic = 4;
    Heavy = 5;
  }

  message WeaponAbility {
    enum AbilityType {
      ABILITY_NONE = 0;
      Custom = 1;
      SingleShot = 2;
      Burst = 3;
      AOE = 4;
      Reload = 5;
    }

    enum OverrideType {
      OVERRIDE_NONE = 0;
      Override = 1;
      Add = 2;
    }

    optional AbilityType type = 10; // Type
    optional string ability_bp_name = 19;
    optional string ability_bp = 20; // m_Ability
    optional string fx_bp_name = 29; // m_FXSettings
    optional string fx_bp = 30;
    // optional OverrideType on_hit_override_type = 40; // OnHitOverrideType
    optional string on_hit_actions = 50; // m_OnHitActions
    optional string on_hit_action_name = 51;
    optional int32 ap = 60; // AP
  }

  message StatRestriction {
    string stat = 1;
    int32 requirement = 2;
  }

  message FactRequirement {
    optional bool all = 1;
    optional bool negate = 2;
    repeated string bp = 3;
    repeated string bp_name = 4;
  }

  string guid = 1;
  string blueprint_name = 100;
  string name_key = 180;
  string name_shared_key = 190;
  string name = 200;
  string description_key = 280;
  string description_shared_key = 290;
  string description = 300;
  optional WeaponCategory category = 400; // Category
  optional WeaponFamily family = 500; // Family
  optional WeaponClassification classification = 600; // Classification
  optional bool heavy = 700; // m_Heaviness: Heavy or NotHeavy
  optional bool two_handed = 800; // IsTwoHanded AND m_HoldingType: TwoHanded or OneHanded
  optional int32 min_damage = 900; // WarhammerDamage
  optional int32 max_damage = 1000; // WarhammerMaxDamage
  optional int32 penetration = 1100; // WarhammerPenetration
  optional int32 dodge_reduction = 1200; // DodgePenetration
  optional int32 additional_hit_chance = 1300; // AdditionalHitChance
  optional int32 recoil = 1400; // WarhammerRecoil
  optional int32 max_range = 1500; // WarhammerMaxDistance
  optional int32 ammo = 1600; // WarhammerMaxAmmo
  optional int32 rate_of_fire = 1700; // RateOfFire
  optional WeaponAbility ability1 = 1800; // AbilityContainer.Ability1
  optional WeaponAbility ability2 = 1810; // AbilityContainer.Ability2
  optional WeaponAbility ability3 = 1820; // AbilityContainer.Ability3
  optional WeaponAbility ability4 = 1830; // AbilityContainer.Ability4
  optional WeaponAbility ability5 = 1840; // AbilityContainer.Ability5
  optional StatRestriction stat_restriction = 1900;
  repeated FactRequirement fact_requirement = 1950;
  repeated string extra_fact = 2000;
  repeated string extra_fact_name = 2001;
  repeated string sources = 2100;
}
